old/lenovo-v15-g2-i5/test-logs/b7814cac5c55b7560a5dcac94409bf165f9c22bd/baseline-fp-opt-id.log
#####
baseline-fp-opt-id - Run 1
2024-02-13 11:28:04
#####
  File "/home/ubuntu/.phoronix-test-suite/installed-tests/system/selenium-top-sites-1.0.3/./run-benchmark.py", line 26
    self.driver = webdriver.()
                            ^
SyntaxError: invalid syntax

#####
baseline-fp-opt-id - Run 2
2024-02-13 11:28:08
#####
  File "/home/ubuntu/.phoronix-test-suite/installed-tests/system/selenium-top-sites-1.0.3/./run-benchmark.py", line 26
    self.driver = webdriver.()
                            ^
SyntaxError: invalid syntax

#####
baseline-fp-opt-id - Run 3
2024-02-13 11:28:10
#####
  File "/home/ubuntu/.phoronix-test-suite/installed-tests/system/selenium-top-sites-1.0.3/./run-benchmark.py", line 26
    self.driver = webdriver.()
                            ^
SyntaxError: invalid syntax

